--- a/pub/cfmem.yaml
+++ b/pub/cfmem.yaml
@@ -6,30 +6,48 @@ log-level: info
 external-controller: 0.0.0.0:9090
 proxies:
   - &id001
-    name: 🇺🇸_US_美国_1
-    type: trojan
-    server: 104.21.69.44
-    port: 443
-    udp: true
-    password: qj1Dz1CJmFQRhWr1SP80aA
-    sni: cdn-21.gsmxreality.com
-    skip-cert-verify: true
-    network: grpc
-    grpc-opts:
-      grpc-service-name: 443trojan
+    name: 🇵🇱_PL_波兰_1
+    type: ss
+    server: 51.77.53.200
+    port: 4444
+    password: pKEW8JPByTVTLtM
+    cipher: aes-256-gcm
   - &id002
-    name: 🇺🇸_US_美国_2
-    type: trojan
-    server: 172.67.204.84
-    port: 443
-    udp: true
-    password: qj1Dz1CJmFQRhWr1SP80aA
-    sni: cdn-21.gsmxreality.com
-    skip-cert-verify: true
-    network: grpc
-    grpc-opts:
-      grpc-service-name: 443trojan
+    name: 🇵🇱_PL_波兰_2
+    type: ss
+    server: 51.77.53.200
+    port: 7306
+    password: FoOiGlkAA9yPEGP
+    cipher: aes-256-gcm
   - &id003
+    name: 🇺🇸_US_美国_1
+    type: ss
+    server: 156.146.38.163
+    port: 443
+    password: shadowsocks
+    cipher: aes-128-cfb
+  - &id004
+    name: 🇵🇱_PL_波兰_3
+    type: ss
+    server: 51.77.53.200
+    port: 7002
+    password: RexnBgU7EV5ADxG
+    cipher: aes-256-gcm
+  - &id005
+    name: 🇵🇱_PL_波兰_4
+    type: ss
+    server: 51.77.53.200
+    port: 5001
+    password: Y6R9pAtvxxzmGC
+    cipher: aes-256-gcm
+  - &id006
+    name: 🇵🇱_PL_波兰_5
+    type: ss
+    server: 51.77.53.200
+    port: 6679
+    password: TEzjfAYq2IjtuoS
+    cipher: aes-256-gcm
+  - &id007
     name: 🇺🇸_US_美国->🇮🇳_IN_印度_1
     type: vmess
     server: 172.67.164.78
@@ -44,7 +62,102 @@ proxies:
       path: /
       headers:
         host: in3.wish.ml
-  - &id004
+  - &id008
+    name: 🇵🇱_PL_波兰_6
+    type: ss
+    server: 51.77.53.200
+    port: 6697
+    password: TEzjfAYq2IjtuoS
+    cipher: aes-256-gcm
+  - &id009
+    name: 🇵🇱_PL_波兰_7
+    type: ss
+    server: 51.77.53.200
+    port: 8091
+    password: PCnnH6SQSnfoS27
+    cipher: aes-256-gcm
+  - &id010
+    name: 🇵🇱_PL_波兰_8
+    type: ss
+    server: 51.77.53.200
+    port: 2375
+    password: faBAoD54k87UJG7
+    cipher: aes-256-gcm
+  - &id011
+    name: 🇵🇱_PL_波兰_9
+    type: ss
+    server: 51.77.53.200
+    port: 8881
+    password: kDWvXYZoTBcGkC4
+    cipher: aes-256-gcm
+  - &id012
+    name: 🇵🇱_PL_波兰_10
+    type: ss
+    server: 51.77.53.200
+    port: 5004
+    password: g5MeD6Ft3CWlJId
+    cipher: aes-256-gcm
+  - &id013
+    name: 🇵🇱_PL_波兰_11
+    type: ss
+    server: 51.77.53.200
+    port: 6379
+    password: zDNVedRFPQexG9v
+    cipher: aes-256-gcm
+  - &id014
+    name: 🇵🇱_PL_波兰_12
+    type: ss
+    server: 51.77.53.200
+    port: 8118
+    password: cdBIDV42DCwnfIN
+    cipher: aes-256-gcm
+  - &id015
+    name: 🇷🇺_RU_俄罗斯联邦
+    type: vmess
+    server: 45.136.245.240
+    port: 12910
+    cipher: auto
+    uuid: 8259cb1c-dd6c-4739-9c88-af550d977525
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+  - &id016
+    name: 🇺🇸_US_美国_2
+    type: vmess
+    server: 23.154.136.2
+    port: 443
+    cipher: auto
+    uuid: 03fcc618-b93d-6796-6aed-8a38c975d581
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /linkvws
+  - &id017
+    name: 🇨🇦_CA_加拿大
+    type: vmess
+    server: 158.51.121.36
+    port: 443
+    cipher: auto
+    uuid: 03fcc618-b93d-6796-6aed-8a38c975d581
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /linkvws
+  - &id018
+    name: 🇬🇧_GB_英国_1
+    type: ss
+    server: 212.102.53.197
+    port: 443
+    password: shadowsocks
+    cipher: aes-128-gcm
+  - &id019
     name: 🇺🇸_US_美国->🇫🇷_FR_法国_1
     type: vmess
     server: 172.67.130.140
@@ -59,7 +172,18 @@ proxies:
       path: /
       headers:
         host: s1c.v2.v001sss.xyz
-  - &id005
+  - &id020
+    name: 🇨🇳_CN_中国->🇺🇸_US_美国
+    type: vmess
+    server: 183.240.179.207
+    port: 30013
+    cipher: auto
+    uuid: 5bd5899a-4b78-4d75-8570-4d21b43422c4
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: tcp
+  - &id021
     name: 🇺🇸_US_美国->🇮🇳_IN_印度_2
     type: vmess
     server: hk.wish.ml
@@ -74,95 +198,13 @@ proxies:
       path: /
       headers:
         host: in3.wish.ml
-  - &id006
-    name: 🇬🇧_GB_英国_1
-    type: ss
-    server: 212.102.53.80
-    port: 443
-    password: shadowsocks
-    cipher: aes-128-gcm
-  - &id007
+  - &id022
     name: 🇺🇸_US_美国_3
     type: vmess
-    server: cfcdn1.sanfencdn9.com
-    port: 2095
+    server: s1c.v2.v001sss.xyz
+    port: 2082
     cipher: auto
-    uuid: 1564cf5b-48c2-46f9-a59c-0234e936f237
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /video/qYZue4zaWS
-      headers:
-        host: us82pRzxDMb.fzbqfrse.xyz
-  - &id008
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国_1
-    type: trojan
-    server: 36.151.195.48
-    port: 20344
-    udp: true
-    password: TNDSJfNv
-    skip-cert-verify: true
-    network: tcp
-  - &id009
-    name: 🇺🇸_US_美国_4
-    type: ss
-    server: 156.146.38.163
-    port: 443
-    password: shadowsocks
-    cipher: aes-128-cfb
-  - &id010
-    name: 🇬🇧_GB_英国_2
-    type: ss
-    server: 212.102.53.193
-    port: 443
-    password: shadowsocks
-    cipher: aes-128-gcm
-  - &id011
-    name: 🇬🇧_GB_英国_3
-    type: ss
-    server: 212.102.53.197
-    port: 443
-    password: shadowsocks
-    cipher: aes-128-gcm
-  - &id012
-    name: 🇺🇸_US_美国_5
-    type: ss
-    server: 38.114.114.207
-    port: 8080
-    password: KixLvKzwjekG00rm
-    cipher: aes-256-gcm
-  - &id013
-    name: 🇺🇸_US_美国_6
-    type: ss
-    server: 38.114.114.207
-    port: 7001
-    password: RexnBgU7EV5ADxG
-    cipher: aes-256-gcm
-  - &id014
-    name: 🇨🇦_CA_加拿大_1
-    type: trojan
-    server: 91.194.11.168
-    port: 443
-    udp: true
-    password: 3e2290c5-332f-4bbe-8efb-05d4addc095b
-    skip-cert-verify: true
-    network: tcp
-  - &id015
-    name: 🇺🇸_US_美国_7
-    type: ss
-    server: 212.102.47.198
-    port: 443
-    password: shadowsocks
-    cipher: aes-128-cfb
-  - &id016
-    name: 🇺🇸_US_美国_8
-    type: vmess
-    server: 172.67.204.84
-    port: 80
-    cipher: auto
-    uuid: 753d0d83-3f5b-4821-860e-082f0b3db609
+    uuid: 112ac36f-3f53-4e26-8371-d25c028e1b9a
     alterId: 0
     tls: false
     skip-cert-verify: true
@@ -170,8 +212,65 @@ proxies:
     ws-opts:
       path: /
       headers:
-        host: no1-vmess.sshmax.xyz
-  - &id017
+        host: s1c.v2.v001sss.xyz
+  - &id023
+    name: 🇬🇧_GB_英国_2
+    type: ss
+    server: 212.102.53.193
+    port: 443
+    password: shadowsocks
+    cipher: aes-128-gcm
+  - &id024
+    name: 🇬🇧_GB_英国_3
+    type: ss
+    server: 212.102.53.80
+    port: 443
+    password: shadowsocks
+    cipher: aes-128-gcm
+  - &id025
+    name: 🇺🇸_US_美国_4
+    type: ss
+    server: 89.117.109.97
+    port: 443
+    password: rhnAUMfOWIgjT917yYCG7u
+    cipher: chacha20-ietf-poly1305
+  - &id026
+    name: 🇺🇸_US_美国_5
+    type: ss
+    server: 38.114.114.207
+    port: 7001
+    password: RexnBgU7EV5ADxG
+    cipher: aes-256-gcm
+  - &id027
+    name: 🇺🇸_US_美国_6
+    type: ss
+    server: 38.114.114.207
+    port: 8080
+    password: KixLvKzwjekG00rm
+    cipher: aes-256-gcm
+  - &id028
+    name: 🇺🇸_US_美国_7
+    type: ss
+    server: 52.88.161.5
+    port: 443
+    password: amazonskr05
+    cipher: aes-256-cfb
+  - &id029
+    name: 🇺🇸_US_美国_8
+    type: vmess
+    server: russia.com
+    port: 8880
+    cipher: auto
+    uuid: 64a57b5f-45e0-40c3-8316-97d0ff53fd96
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /api/v3/download.getFile
+      headers:
+        host: sssub.v2.001.ssrsub.com
+  - &id030
     name: 🇺🇸_US_美国_9
     type: vmess
     server: russia.com
@@ -186,22 +285,14 @@ proxies:
       path: /api/v3/download.getFile
       headers:
         host: sssub.v2.001.ssrsub.com
-  - &id018
-    name: 🇺🇸_US_美国_10
-    type: vmess
-    server: russia.com
-    port: 8880
-    cipher: auto
-    uuid: 64a57b5f-45e0-40c3-8316-97d0ff53fd96
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /api/v3/download.getFile
-      headers:
-        host: sssub.v2.001.ssrsub.com
-  - &id019
+  - &id031
+    name: 🇵🇱_PL_波兰_13
+    type: ss
+    server: 51.77.53.200
+    port: 8119
+    password: cdBIDV42DCwnfIN
+    cipher: aes-256-gcm
+  - &id032
     name: 🇺🇸_US_美国->🇫🇷_FR_法国_2
     type: vmess
     server: 104.21.8.157
@@ -216,102 +307,6 @@ proxies:
       path: /
       headers:
         host: s1c.v2.v001sss.xyz
-  - &id020
-    name: 🇷🇺_RU_俄罗斯联邦_1
-    type: ss
-    server: 5.182.87.210
-    port: 35961
-    password: oU863Ak7YF0zFM1c4oPVpI
-    cipher: aes-256-gcm
-  - &id021
-    name: 🇺🇸_US_美国_11
-    type: ss
-    server: 205.134.180.137
-    port: 443
-    password: g13S7doXar0A
-    cipher: chacha20-ietf-poly1305
-  - &id022
-    name: 🇺🇸_US_美国_12
-    type: ss
-    server: 95.164.47.219
-    port: 8388
-    password: ZmRiM
-    cipher: chacha20-ietf-poly1305
-  - &id023
-    name: 🇺🇸_US_美国_13
-    type: ss
-    server: 52.88.161.5
-    port: 443
-    password: amazonskr05
-    cipher: aes-256-cfb
-  - &id024
-    name: 🇩🇪_DE_德国_1
-    type: ss
-    server: 80.92.204.106
-    port: 9094
-    password: rpgbNnU9rDDU4aWZ
-    cipher: aes-256-cfb
-  - &id025
-    name: 🇩🇪_DE_德国_2
-    type: ss
-    server: 80.92.204.106
-    port: 9000
-    password: a3GFYt36Sm82Vys9
-    cipher: aes-256-cfb
-  - &id026
-    name: 🇩🇪_DE_德国_3
-    type: ss
-    server: 80.92.204.106
-    port: 9011
-    password: M3t2ZEQcMGRWBjRa
-    cipher: aes-256-cfb
-  - &id027
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国_2
-    type: vmess
-    server: 183.240.179.207
-    port: 30013
-    cipher: auto
-    uuid: 5bd5899a-4b78-4d75-8570-4d21b43422c4
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: tcp
-  - &id028
-    name: 🇷🇺_RU_俄罗斯联邦_2
-    type: vmess
-    server: 45.147.200.170
-    port: 56508
-    cipher: auto
-    uuid: 892027cd-2cb5-40ca-9dbb-80191e28239c
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: tcp
-  - &id029
-    name: 🇨🇦_CA_加拿大_2
-    type: vmess
-    server: ca-full.privateip.net
-    port: 443
-    cipher: auto
-    uuid: 04672bf7-9d44-4edf-9222-dfbfb8f74a1f
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /RACEVPN
-      headers:
-        host: ca-full.privateip.net
-  - &id030
-    name: 🇫🇷_FR_法国
-    type: trojan
-    server: 15.237.243.171
-    port: 22222
-    udp: true
-    password: telegram-id-directvpn
-    sni: trojan.burgerip.co.uk
-    skip-cert-verify: true
-    network: tcp
 proxy-groups:
   - name: PROXY
     type: select
@@ -368,6 +363,8 @@ proxy-groups:
       - *id028
       - *id029
       - *id030
+      - *id031
+      - *id032
   - name: LOAD-BALANCE
     type: load-balance
     url: http://www.gstatic.com/generate_204
@@ -403,6 +400,8 @@ proxy-groups:
       - *id028
       - *id029
       - *id030
+      - *id031
+      - *id032
   - name: SELECT
     type: select
     proxies:
@@ -436,6 +435,8 @@ proxy-groups:
       - *id028
       - *id029
       - *id030
+      - *id031
+      - *id032
 rules:
   - RULE-SET,applications,DIRECT
   - DOMAIN,clash.razord.top,DIRECT
